--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h2>Below is a Git cheatsheet for your reference!</h2>
 <h3>Use GitHub and Git in your projects this semester!</h3>
 <iframe width="100%" height="90%" src="https://about.gitlab.com/images/press/git-cheat-sheet.pdf"></iframe>
+<h1>New h1 tag</h1>
